name:                bluetooth
-- The package version. See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            Haskell bindings to OS-specific Bluetooth libraries.
-- description:         
homepage:            https://github.com/RyanGlScott/bluetooth
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          ryan.gl.scott@ku.edu
-- copyright:           
category:            Network
build-type:          Simple
extra-source-files:  README.md, cbits/*.c, include/*.h
cabal-version:       >=1.10

library
  exposed-modules:     Network.Bluetooth
                       Network.Bluetooth.UUID
  other-modules:       Network.Bluetooth.Utils
  if os(linux)
    other-modules:     Network.Bluetooth.Linux
                       Network.Bluetooth.Linux.Internal
                       Network.Bluetooth.Linux.SDP
                       Network.Bluetooth.Linux.Socket
                       Network.Bluetooth.Linux.Types
  build-depends:       base >= 3 && < 5
                     , network
                     , network-info
                     , uuid
  build-tools:         c2hs
  c-sources:           cbits/wr_bluetooth.c
                     , cbits/wr_sdp.c
                     , cbits/wr_sdp_lib.c
  default-language:    Haskell2010
  if os(linux)
    extra-libraries:   bluetooth
  ghc-options:         -Wall -threaded
  cc-options:          -Wall
  if impl(ghc >= 7.8)
    cc-options:        -fPIC
  hs-source-dirs:      src
  include-dirs:        include
  if os(linux)
    includes:          bluetooth/bluetooth.h
                     , bluetooth/rfcomm.h
                     , bluetooth/sdp.h
                     , bluetooth/sdp_lib.h
                     , sys/socket.h
                     , wr_bluetooth.h
                     , wr_sdp.h
                     , wr_sdp_lib.h
    install-includes:  bluetooth/bluetooth.h
                     , bluetooth/rfcomm.h
                     , bluetooth/sdp.h
                     , bluetooth/sdp_lib.h
                     , sys/socket.h
                     , wr_bluetooth.h
                     , wr_sdp.h
                     , wr_sdp_lib.h
