name:                bluetooth
-- The package version. See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            Haskell bindings to OS-specific Bluetooth libraries.
-- description:         
homepage:            https://github.com/RyanGlScott/bluetooth
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          ryan.gl.scott@ku.edu
-- copyright:           
category:            Network
build-type:          Simple
extra-source-files:  README.md, cbits/*.c, include/*.h
cabal-version:       >=1.10

library
  exposed-modules:     Network.Bluetooth
                       Network.Bluetooth.Addr
                       Network.Bluetooth.SDP
                       Network.Bluetooth.Socket
                       Network.Bluetooth.UUID
  other-modules:       Network.Bluetooth.Utils
  if os(windows)
    other-modules:
  if os(darwin)
    other-modules:
  if os(linux)
    other-modules:     Network.Bluetooth.Linux.Addr
                       Network.Bluetooth.Linux.Internal
                       Network.Bluetooth.Linux.SDP
                       Network.Bluetooth.Linux.Socket
  if os(freebsd)
    other-modules:
  build-depends:       base >= 3 && < 5
                     , binary
                     , network
                     , network-info
                     , uuid
  if impl(ghc < 7.8)
    build-depends:     ghc-prim
  if os(windows)
    build-depends:     Win32
  build-tools:         c2hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
  cc-options:          -Wall
  if impl(ghc >= 7.8)
    cc-options:        -fPIC
  hs-source-dirs:      src
  include-dirs:        include
  if os(windows)
    c-sources:
  if os(darwin)
    c-sources:
  if os(linux)
    c-sources:         cbits/wr_bluetooth.c
                     , cbits/wr_sdp.c
                     , cbits/wr_sdp_lib.c
    pkgconfig-depends: bluez
    includes:          wr_bluetooth.h
                     , wr_l2cap.h
                     , wr_rfcomm.h
                     , wr_sdp.h
                     , wr_sdp_lib.h
    install-includes:  wr_bluetooth.h
                     , wr_l2cap.h
                     , wr_rfcomm.h
                     , wr_sdp.h
                     , wr_sdp_lib.h
  if os(freebsd)
    extra-libraries:   bluetooth
