name:                bluetooth-examples
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            https://github.com/RyanGlScott/bluetooth/examples
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          ryan.gl.scott@ku.edu
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

-- executable bluetooth-example-device-inquiry
-- executable bluetooth-example-l2cap-client
-- executable bluetooth-example-l2cap-flush-timeout
-- executable bluetooth-example-l2cap-server
-- executable bluetooth-example-rfcomm-client
-- executable bluetooth-example-rfcomm-client-select

executable bluetooth-example-rfcomm-server
  buildable:           True
  main-is:             Main.hs  
  build-depends:       base >= 3 && < 5,
                       bluetooth,
                       network
  hs-source-dirs:      rfcomm-server
  default-language:    Haskell2010
  GHC-options:         -Wall -threaded

-- executable bluetooth-example-linux-rfcomm-server-select
-- executable bluetooth-example-sdp-register
-- executable bluetooth-example-sdp-search