name:                bluetooth-examples
version:             0.1.0.0
synopsis:            Simple demonstrations of Bluetooth features.       
homepage:            https://github.com/RyanGlScott/bluetooth/examples
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          ryan.gl.scott@ku.edu
copyright:           (c) 2014 Ryan Scott
category:            Network
build-type:          Simple
cabal-version:       >=1.10

-- executable bluetooth-example-device-inquiry
-- executable bluetooth-example-l2cap-client-no-sdp
-- executable bluetooth-example-l2cap-client-sdp
-- executable bluetooth-example-l2cap-flush-timeout
-- executable bluetooth-example-l2cap-server

executable bluetooth-example-rfcomm-client-no-sdp
  buildable:           True
  main-is:             Main.hs
  other-modules:       Utils
  build-depends:       base >= 3 && < 5
                     , bluetooth
                     , network
  hs-source-dirs:      rfcomm-client-no-sdp, .
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded

-- executable bluetooth-example-rfcomm-client-sdp

executable bluetooth-example-rfcomm-server
  buildable:           True
  main-is:             Main.hs
  other-modules:       Utils
  build-depends:       base >= 3 && < 5
                     , bluetooth
                     , containers
                     , network
  hs-source-dirs:      rfcomm-server, .
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded

-- executable bluetooth-example-sdp-search